--- a/Task1.css
+++ b/Task1.css
@@ -26,6 +26,10 @@ a{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.navigation>ul>li>a:hover{
+    color: blue;
+}
+
 body>header{
     width: 100%;
     height: 100px;
@@ -61,8 +65,12 @@ body>.sub_navigation>div>a{
     padding-right: 10px;
 }
 
+body>.sub_navigation>div>a:hover{
+    background-color: blue;
+}
+
 aside{
-    background-color: whitesmoke;
+    background-color: white;
     width: 24%;
     height: 100%;
 }
@@ -75,8 +83,12 @@ aside >ul>li{
     list-style-type: none;
     display: block;
     padding: 11px;
-    background-color: whitesmoke;
+    background-color: #EBEAEA;
     margin-bottom: 5px;
+}
+
+aside >ul>li:hover{
+    background-color: white;
 }
 
 aside >ul>li>a{
@@ -85,6 +97,8 @@ aside >ul>li>a{
     color: #333333;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
 
 .main_content{
     display: flex;
@@ -140,3 +154,31 @@ footer{
 tr:nth-child(odd) {
     background-color: whitesmoke;
   }
+
+  @media only screen and (max-width: 1000px) {
+    .navigation{
+        display: none;
+  }
+}
+  @media only screen and (max-width: 600px) {
+      .navigation{
+          display: none;
+    }
+    aside{
+        display: none;
+    }
+    .users_table{
+        width: 100%;
+        height: 100%;
+    }
+    body>.sub_navigation>div{
+        height: 100%;
+        display: block;
+        padding: 10px;
+    }
+    body>.sub_navigation>div>a{
+        display: block;
+        margin: 20px;
+    
+  }
+}
