--- a/Task1.css
+++ b/Task1.css
@@ -160,7 +160,7 @@ tr:nth-child(odd) {
         display: none;
   }
 }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
       .navigation{
           display: none;
     }
@@ -181,4 +181,11 @@ tr:nth-child(odd) {
         margin: 20px;
     
   }
+  .holiday_header{
+    font-size: 10px;
+  }
+
+  footer{
+    font-size: 10px;
+ }
 }
